tests/namespace/namespace.exp
Error: client.js:3
  3: var bar: string = ns.foo
                       ^^^^^^ number. This type is incompatible with
  3: var bar: string = ns.foo
              ^^^^^^ string

Error: namespace.js:3
  3: var f: T = function(x:string): void { }
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
  3: var f: T = function(x:string): void { }
            ^ T
  The first parameter is incompatible:
      2: type T = (x:number) => void;
                     ^^^^^^ number. This type is incompatible with
      3: var f: T = function(x:string): void { }
                               ^^^^^^ string

Error: namespace.js:11
 11: var y:number = bar(0, x => "");
                    ^^^^^^^^^^^^^^^ string. This type is incompatible with
 11: var y:number = bar(0, x => "");
           ^^^^^^ number

Error: namespace.js:15
 15: var s2:Seq = [[""]];
                  ^^^^^^ array literal. Has some incompatible type argument with
 13: type Seq = number | Array<Seq>;
                         ^^^^^^^^^^ array type
  Type argument `T` is incompatible:
     15: var s2:Seq = [[""]];
                       ^^^^ array literal. Has some incompatible type argument with
     13: type Seq = number | Array<Seq>;
                             ^^^^^^^^^^ array type
      Type argument `T` is incompatible:
         15: var s2:Seq = [[""]];
                            ^^ string. This type is incompatible with
         13: type Seq = number | Array<Seq>;
                        ^^^^^^ number

Error: namespace.js:17
 17: module.exports = { foo: ("": number) };
                              ^^ string. This type is incompatible with
 17: module.exports = { foo: ("": number) };
                                  ^^^^^^ number


Found 5 errors
